Refactoring codes and adding handlers request exceptions